# aineron

./: .env.example  .gitignore  1.docx  2.docx  BILLING_MIGRATION_PLAN.md  CLAUDE.md  CLONE_COMPARISON.md  COMPETITIVE_PLAN.md  Dockerfile  Dockerfile.frontend  Dockerfile.playwright  Dockerfile.sandbox  FREE_MODELS.md  GLOBAL_EXPANSION_PLAN.md  IMAGE_VIDEO_PLAN.md  IMAGE_VIDEO_UX_PLAN.md  IMPLEMENTATION_PLAN_STAGE2.md  INTERIOR_DESIGN_AI_ANALYSIS.md  MASTER_PLAN.md  MEMORY_SUPREMACY_PLAN.md  PERFORMANCE_PLAN.md  PERSISTENT_MEMORY_PLAN.md  PRICING.md  PROJECT_SPACES_PLAN.md  ROADMAP.md  SANDBOX_API_PLAN.md  SEO_PILOT_ID_AR_PLAN.md  STUDIO_COMMITS.md  STUDIO_MASTER_PLAN.md  STUDIO_PLAN.md  STUDIO_PREVIEW_PLAN.md  STUDIO_PREVIEW_STATUS.md  STUDIO_QUALITY_PLAN.md  STUDIO_UPGRADE_COMMITS.md  STUDIO_UPGRADE_PLAN.md  STUDIO_V2_PLAN.md  STUDIO_V3_COMMITS.md  STUDIO_V3_PLAN.md  STUDIO_V4_COMMITS.md  STUDIO_V4_PLAN.md  (+28 more)
docs/: postman_collection.json
frontend/: .eslintrc.json  .gitignore  (+5 more)
preview-service/: Dockerfile  README.md  main.py  pyproject.toml  sandbox_api.py  settings.py
preview-service/db/: _migrate.py  aineron_provider.py  base.py  crypto.py  external_provider.py  neon_provider.py  proxy.py  timeweb_provider.py
preview-service/runtime/: base.py  e2b_runtime.py  sandbox_runtime.py  sprint5_bot.py
preview-service/spikes/: e2b_basic.py  e2b_egress.py  sandbox_smoke.py
preview-service/templates/: base-package.json  build.sh  django.Dockerfile  nextjs.Dockerfile  python.Dockerfile
sdk/python/: README.md  pyproject.toml
sdk/python/aineron/: __init__.py  sandbox.py
(+715 files in other folders)
