[project]
name = "preview-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis>=5.0.0",
    "cryptography>=42.0.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.27.0",
    "e2b>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
