[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aineron"
version = "0.1.0"
description = "Aineron Sandboxes SDK — изолированные microVM для исполнения кода AI-агентов. Из России, за рубли."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "aineron.ru" }]
keywords = ["sandbox", "ai", "agents", "code-execution", "microvm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://aineron.ru/sandbox/"
Documentation = "https://aineron.ru/api-docs/"

[tool.hatch.build.targets.wheel]
packages = ["aineron"]
